adjusted bootstrap and css

--- a/about.html
+++ b/about.html
@@ -37,18 +37,18 @@
                                     <div class="row"> 
                                         <div class="col-md-12 col-lg-6">
                                             <p class="required">Name</p>
-                                            <div class="form-group"><input class="form-control" type="text" name="first_name" placeholder="First" required></div>
+                                            <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="text" name="first_name" placeholder="First" required></div>
                                         </div>
                                         <div class="col-md-12 col-lg-6"> 
                                             <p id="hidden"> - </p>
-                                            <div class="form-group"><input class="form-control" type="text" name="last_name" placeholder="Last" required></div>
+                                            <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="text" name="last_name" placeholder="Last" required></div>
                                         </div>
                                     </div>
                                     <p class="required">Pronouns</p>
-                                    <div class="form-group"><input class="form-control" type="text" name="pronouns" placeholder="Ex: she/hers, they/them, ze/zir" required></div>
+                                    <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="text" name="pronouns" placeholder="Ex: she/hers, they/them, ze/zir" required></div>
                                     <input type="hidden" name="_subject" value="New inquiry"/>
                                     <p class="required">Email</p>
-                                    <div class="form-group"><input class="form-control" type="email" name="_replyto"></div>
+                                    <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="email" name="_replyto"></div>
                                     <p class="required">Message</p>
                                     <textarea class="form-control" name="message" rows="8"></textarea> 
                                     <p style="padding-top: 5%;">This form is exclusively for professional inquiries. For personal inquiries, please contact her on social media. </p>
