--- a/test2.html
+++ b/test2.html
@@ -99,7 +99,7 @@
                 <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -290,23 +290,23 @@
             </div>
             <!-- 2018  -->
             <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;" >2018</h3>
-                <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;" >2017</h3>
+                <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2018</h3>
+                <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;">2017</h3>
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Interactive Art Pages</h3>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="column" id="column2">
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/20182017/artist_2017.png" style="width:100%">
+                            <img class="content-image" src="img/larger_tbs.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Inspired by <i>The Stranger</i></div>
+                                <div class="captions"> Inspired by <i>Macbeth</i></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column" id="column12">
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -318,9 +318,7 @@
                     </div>
                 </div>
             </div>
-            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
-                <hr width="75%" color="#d8ff33" border-width="10px">
-            </div>
+
         </div>
     </div>
 
