--- a/artist.html
+++ b/artist.html
@@ -23,70 +23,60 @@
                 <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Digital & Physical Art</h3>
             </div>
-            <div class="row" style="padding-bottom: 2%;">
-                <div style="padding-right: 2%;" class="column">
+            <div class="row">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_3tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions"> Untitled </div>
-                            </div>
+                            <div class="content-details fadeIn-top"> </div>
                         </div>
                     </div>
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions">Mini Zine Series</div>
-                            </div>
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series</div></div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions">Untitled</div>
-                            </div>
+                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_3tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions"> Untitled </div>
-                            </div>
+                            <div class="content-details fadeIn-top"></div>
                         </div>
                     </div>
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions">Mini Zine Series</div>
-                            </div>
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series</div></div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions"> Untitled </div>
-                            </div>
+                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
+
+            
             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
                 <hr width="75%" color="#d8ff33" border-width="10px">
             </div>
@@ -97,7 +87,7 @@
                 <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -117,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -126,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -146,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -164,8 +154,8 @@
                 <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Textile Design</h3>
             </div>
-            <div class="row" style="padding-bottom: 2%;">
-                <div style="padding-right: 2%;" class="column">
+            <div class="row">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -176,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -187,13 +177,13 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> filler text </div>
+                                <div class="captions"> Final Croquis </div>
                             </div>
                         </div>
                     </div>
@@ -202,12 +192,12 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions">Plaid Textile Featuring Motif</div>
+                                <div class="captions"> Final Plaid Textile Featuring Motif</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -220,27 +210,7 @@
                 </div>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="column">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions"> filler text </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions">Plaid Textile Featuring Motif</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -251,13 +221,24 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Final Project Motifs </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> filler text </div>
+                                <div class="captions"> Final Croquis </div>
                             </div>
                         </div>
                     </div>
@@ -266,12 +247,12 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions">Plaid Textile Featuring Motif</div>
+                                <div class="captions"> Final Plaid Textile Featuring Motif</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -293,7 +274,7 @@
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Interactive Art Pages</h3>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="column" id="column2">
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
@@ -304,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="column" id="column12">
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
