--- a/index.html
+++ b/index.html
@@ -23,39 +23,187 @@
                 </div>
             </header>
             <div style="background: #000000; padding-top: 5%; padding-right: 5%; padding-left: 5%;">
-                <div class="row"> 
-                    <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_2.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_1.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%;">
+                <div class="row">
+                     <!-- col 1 -->
+                    <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_1.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
-                    </div> 
-                    <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_4.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/dev/2019/dev_2019_1tb.png" style="padding-bottom: 10%;">
-                        <img id="mahe" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%;">
+                     <!-- col 2  -->
+                    <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2020/artist_2020_1.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div> 
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div> 
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="mg/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_3.png" style="padding-bottom: 10%;">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
-                    </div> 
+                     <!-- col 3  -->
+                    <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div id="mahe" class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2020/artist_2020_2.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col 4  -->
+                    <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div> 
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div> 
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
+                                <div class="content-details fadeIn-top"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div> 
             </div>
             <style>
