new image uploads, edits to artist 2019

--- a/artist.html
+++ b/artist.html
@@ -161,7 +161,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions">Final Project Mood Board </div>
+                                <div class="captions">Final Project, Mood Board </div>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Project Motifs </div>
+                                <div class="captions"> Final Project, Motif Set </div>
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Plaid Textile Featuring Motif</div>
+                                <div class="captions"> Final, Plaid Textile Featuring Motif</div>
                             </div>
                         </div>
                     </div>
@@ -203,13 +203,24 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Project Motifs </div>
+                                <div class="captions"> </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/artist_2019_5.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Indexed Color Motif Mood Board </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
@@ -252,13 +263,74 @@
                         </div>
                     </div>
                 </div>
+                
+            </div>
+            <div class="row">
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_5.png" style="width:100%">
+                            <img class="content-image" src="img/art/2019/artist_2019_7.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Indexed Color Motif Mood Board </div>
+                                <div class="captions">Project 1, Mood Board </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/motifs1.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Project 1, Motif Set </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/tossup.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Project 1, Toss Up </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/colortossup.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Project 1, Color Toss Up</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/plaid.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Plaid</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2019/reflectedpatternset.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Project 1, Reflected Pattern Set </div>
                             </div>
                         </div>
                     </div>
