added zines, finished artist!

--- a/artist.html
+++ b/artist.html
@@ -66,8 +66,8 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2021/may2021.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
+                            <img class="content-image" src="img/art/2021/1p3.png" style="height: 40%; width:100%;">
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 1 Pg 3</div></div>
                         </div>
                     </div>
                 </div>
@@ -75,8 +75,8 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
+                            <img class="content-image" src="img/art/2021/2p2.png" style="height: 36%; width:100%">
+                            <div class="content-details fadeIn-top"><div class="captions"> Mini Zine Series, Vol 2 Pg 2</div></div>
                         </div>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
+                            <img class="content-image" src="img/art/2021/2p3.png" style="width:100%">
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 2 Pg 3</div></div>
                         </div>
                     </div>
                 </div>
@@ -93,8 +93,8 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
+                            <img class="content-image" src="img/art/2021/3p5.png" style="width:100%">
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 3 Pg 5</div></div>
                         </div>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
-                            <div class="content-details fadeIn-top"><div class="captions"></div></div>
+                            <img class="content-image" src="img/art/2021/3p6.png" style="width:100%">
+                            <div class="content-details fadeIn-top"><div class="captions">Mini Zine Series, Vol 3 Pg 6</div></div>
                         </div>
                     </div>
                 </div>
