--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/gears.jpg" style="width:100%">
+                                <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
+                                <img class="content-image" src="img/art/2019/colortossup.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                                <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
@@ -88,21 +88,21 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div> 
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <img class="content-image" src="img/dev/181716/cfc.gif" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="mg/lights.jpg" style="width:100%">
+                                <img class="content-image" src="img/lights.jpg" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
@@ -119,14 +119,14 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
+                                <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
+                                <img class="content-image" src="img/dev/2019/wearable.gif" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/lights.jpg" style="width:100%">
+                                <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div> 
@@ -199,7 +199,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/2021/artist_2021_3.png" style="width:100%">
+                                <img class="content-image" src="" style="width:100%">
                                 <div class="content-details fadeIn-top"></div>
                             </div>
                         </div>
