open in new tab

--- a/test2.html
+++ b/test2.html
@@ -231,7 +231,10 @@
                         <div class="content-overlay"></div>
                         <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
                         <div class="content-details fadeIn-top">
-                            <div class="captions"> Interactive Art Page Inspired by <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a></div>     
+                            <div class="captions"> Interactive Art Page Inspired by <i>Macbeth</i></div>     
+                            <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
+                                <a href="https://github.com/IPbiramontes/macbeth-characterization" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -242,7 +245,10 @@
                         <div class="content-overlay"></div>
                         <img class="content-image" src="img/dev/181716/cfc.gif" style="width:100%">
                         <div class="content-details fadeIn-top">
-                            <div class="captions"> <a href="https://github.com/IPbiramontes/code-for-change-solar"> Code For Change Hackathon, Won "Best Teamwork"</a></div>
+                            <div class="captions"> Code For Change Hackathon, Won "Best Teamwork"</div>
+                            <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
+                                <a href="https://github.com/IPbiramontes/code-for-change-solar/issues" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
