started working on des & adjusted other pg links

--- a/developer.html
+++ b/developer.html
@@ -44,7 +44,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2020/pfab.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> <a href="https://class.textile-academy.org/2021/isa.biramontes/"> Fabricacademey Documentation</a></div>
+                                <div class="captions"> <a href="https://class.textile-academy.org/2021/isa.biramontes/" target="_blank"> Fabricacademey Documentation</a></div>
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,12 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"><a href="https://github.com/IPbiramontes/2020_Portfolio"> Former Portfolio </a> </div>
+                                <div class="captions">Former Portfolio
+                                    <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
+                                        <a href="https://github.com/IPbiramontes/2020_Portfolio" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
