--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,14 @@
 <div class="footer-basic" style="background: rgb(0,0,0);">
     <footer>
         <div class="social" style="height: 30px;border-style: none;">
-            <a href="https://github.com/IPbiramontes" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
-            <a href="https://www.instagram.com/isa.s_wearables/" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
-            <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
+            <a href="https://github.com/IPbiramontes" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+            <a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+            <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
         </div>
         <p id="footerText" class="copyright">Isa Biramontes © 2021</p>
         <style>
             #footerText {
-                font-family: commuters-sans,sans-serif;
+                font-family: commuters-sans, sans-serif;
                 font-style: italic;
             }
         </style>
